--- a/src/components/dashboard.css
+++ b/src/components/dashboard.css
@@ -16,7 +16,7 @@
 }
 
 .question-answer > .question-card {
-  background-color: #A288A6;
+  background-color: rgb(226, 185, 231);
 }
 
 .submit-button:hover {
