--- a/src/components/header-bar.css
+++ b/src/components/header-bar.css
@@ -4,7 +4,7 @@
   flex-direction: row;
   justify-content: space-between;
   padding: 20px;
-  background-color: #A288A6;
+  background-color: rgb(226, 185, 231);
   border-bottom: 2px solid black;
 }
 
