--- a/src/components/header-bar.css
+++ b/src/components/header-bar.css
@@ -36,12 +36,20 @@
     display: flex;
     flex-direction: column;
     text-align: center;
+    padding-top: 0;
     width: 100%;
   }
+  .logout-section {
+    height: 42px;
+  }
   .logout-button {
-    margin-top: 10px;
+    margin-top: 5px;
+  }
+  .logo {
+    margin-bottom: 0;
   }
   .header-username, .header-name {
+    display: none;
     font-size: 18px;
     padding: 10px;
     margin-right: 0px;
